kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: infraflow
  labels:
    name: infraflow
    tier: production
