kubernetes/django-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: infraflow
  labels:
    app: django-app
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
        tier: backend
    spec:
      containers:
      - name: django-container
        image: infraflow-djangoapp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http
        command:
        - "sh"
        - "-c"
        - |
          python manage.py migrate && \
          python manage.py collectstatic --noinput && \
          gunicorn electronics_shop.wsgi:application --bind 0.0.0.0:8000 --workers 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 15


---

apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: infraflow
  labels:
    app: django-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-app
